project/app-todo-list/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app-ns
# Remember that the deployments/pods/ingress/services are created inside the namespace, to which you have to switch into with kubens
