project/app-todo-list/manifests/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-frontend
  template:
    metadata:
      labels:
        app: todo-app-frontend
    spec:
      containers:
        - name: todo-app-frontend
          image: mmiglioranza22/project-todo-app-frontend
          # env:
          #   - name: VITE_BACKEND_URL
          #     value: http://todo-app-backend-svc:1234 does not work,
          #            but http://localhost:8081 because is hardcoded and is used with k3d cluster create
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
