project/app-todo-list/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: todo-app-ns
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db-container
          image: DB_IMAGE
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: postgres-database
              mountPath: /usr/src/app/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-database # same as volumeMount.name
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
