project/app-todo-list/manifests/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app-backend
  ports:
    - port: 1234 # self. Inner port available within the cluster
      protocol: TCP
      targetPort: 5000 # The app's exposed port (defined 8080 in the source code)
