project/app-todo-list/manifests/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-frontend-svc
  namespace: todo-app-ns
spec:
  type: ClusterIP
  selector:
    app: todo-app-frontend
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 5454 # server-vite port
