project/app-todo-list/manifests/statefulset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc # this makes the postgres db discoverable, it will be the host of the pg connection
  namespace: todo-app-ns
  labels:
    app: postgres-db # the chosen container name
spec:
  ports:
    - port: 5432
      name: db
  clusterIP: None # this is necessary to ensure pods identity stays the same (for network and name)
  selector:
    app: postgres-db
