project/app-todo-list/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend-svc
                port:
                  number: 1234
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-frontend-svc
                port:
                  number: 1234
